# decon

./: .dockerignore  .gitignore  pyproject.toml
src/decon/: assembler.py  cli.py  config.py  renderer.py
tests/_data/: example.yaml
tests/smoke/: test_e2e.py
